Revision history for WebService-IdoitAPI

{{$NEXT}}

0.4.4     2024-10-21 10:16:58+02:00 Europe/Berlin
	- feat: idoit-layer3 --list prints information about the gateway

0.4.3     2024-05-07 10:42:03+02:00 Europe/Berlin
	- feat: idoit-test-api print components of i-doit installation

0.4.2     2024-05-06 17:53:12+02:00 Europe/Berlin
	- feat: add script idoit-test-api to test a running API against
	  the current version of the module

0.4.1     2024-05-02 11:45:50+02:00 Europe/Berlin
	- feat: add script idoit-query.pl to send arbitrary queries
	- style: treat .t files like Perl code

0.4.0     2024-02-25 19:40:24+01:00 Europe/Berlin
	- add WebService::IdoitAPI::Layer3Net handles layer 3 networks
	- add script idoit-layer3-net to access Layer3Net

v0.3.1 Fri Nov 10 20:10:14 CET 2023
	- fix: install idoit-object
	- fix: idoit-object: make option --version (and -V) work
	- feat: idoit-reports: when printing CSV, sort columns alphabetically
	- feat: add function WebService::IdoitAPI::Object->get_data()
	- feat: idoit-object: access get_data() with option --get-data

v0.3.0 Wed Nov  8 19:53:37 CET 2023
	- add module WebService::IdoitAPI::Object with functions 
	  that deal with i-doit objects
	- add script idoit-object that provides access to
          WebService::IdoitAPI::Object from the command line

v0.2.2 Sun May  7 11:03:46 CEST 2023
	- add IO::ScalarArray to test dependencies

v0.2.1 Sat May  6 18:58:50 CEST 2023
	- move author tests to xt/
	- remove links to CPAN ratings, fix #148066

v0.2.0 Thu Mar 16 12:15:18 CET 2023
	- add CLI options '--json' and '--pretty' to bin/idoit-reports
	- WebService::IdoitAPI::read_config() tries to find a config file
	  automatically if none is given
	- add CLI option '--csv' to bin/idoit-reports

v0.1.3 Sun Feb 19 10:47:42 CET 2023
	- t/02-connection.t seems to work only with perl >= 5.14

v0.1.2 Fri Feb 17 15:21:27 CET 2023
	- update README
	- give more meaningfull message when JSON RPC client fails
	- fix GitHub issue #1
